# DateTime

./: .gitignore  CMakeLists.txt  README.md  setup_keys.bat
.github/workflows/: ci.yml
DateTime/: DateTime.cpp  DateTime.h  main.cpp
DateTime.xcodeproj/: project.pbxproj
DateTime.xcodeproj/project.xcworkspace/xcuserdata/filippov.xcuserdatad/: UserInterfaceState.xcuserstate
DateTime.xcodeproj/xcshareddata/xcschemes/: DateTime.xcscheme
DateTime.xcodeproj/xcuserdata/filippov.xcuserdatad/xcschemes/: xcschememanagement.plist
DateTime/DateTimeTests/: Tests.cpp
